data/all_generated_tests/raw_wast_tests/block_IncorrectConditionEvaluation_2290.wast
;; **Differential Test Descriptions:**  1. Create a `block` with a `blocktype` that has a specific result type and an instruction sequence containing `br_if` that should only branch if the top stack value is non-zero. Place a `0` on the stack before `br_if`. Verify if branching does not occur incorrectly.

(assert_invalid
  (module (func $block-br_if
    (block (result i32)
      (i32.const 0)
      (br_if 0)
      (i32.const 42)
    )
  ))
  "type mismatch"
)